{
  "save": "Save",
  "error": "Error",
  "noData": "No Data",
  "edit": "Edit",
  "finish": "Finish",
  "cancel": "Cancel",
  "progressButton": "ProgressButton",
  "habitsTitle": "Habits",
  "habitsFloatingActionButtonTooltip": "Add Habit",
  "habitDetailAddTitle": "Add Habit",
  "habitDetailEditTitle": "Edit Habit",
  "habitDetailNameLabelText": "Name",
  "statisticsTitle": "Statistics",
  "statisticsWeekSelection": "Week",
  "statisticsMonthSelection": "Month",
  "textIfItIsEmpty": "You have no habits yet",
  "confirmDeleteTitle": "Delete Habit",
  "confirmDeleteMessage": "Are you sure you want to delete this habit?",
  "delete": "Delete",
  "unknownErrorOccurred": "An unknown error occurred",
  "onboardingStartTitle": "Welcome",
  "onboardingStartSubtitle": "Time to develop good habits",
  "onboardingStartButton": "Start",
  "yustoLogo": "Yusto Logo",
  "onboardingHabitsTitle": "Pursue your goals",
  "onboardingHabitsSubtitle": "Explore the app, find peace of mind to achieve good habits",
  "onboardingStatisticsTitle": "Useful statistics",
  "onboardingStatisticsSubtitle": "Visualize your progress",
  "yusto": "YUSTO"
}
